feat: instant client-side search - load index once, search locally in <50ms

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,12 @@
 {
+  "buildCommand": "npm install && npm run build",
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
+  ],
+  "crons": [
+    {
+      "path": "/api/tcg?endpoint=warmup",
+      "schedule": "0 * * * *"
+    }
   ]
 }
