fix: remove cron config (requires PRO plan)

--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,9 @@
 {
   "buildCommand": "npm install && npm run build",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ],
-  "crons": [
     {
-      "path": "/api/tcg?endpoint=warmup",
-      "schedule": "0 * * * *"
+       "source": "/(.*)",
+        "destination": "/index.html"
     }
   ]
 }
